fix(orderList): overflow for orders

--- a/App/components/common/style/orderslist.scss
+++ b/App/components/common/style/orderslist.scss
@@ -43,7 +43,10 @@
 
         ol {
             width: 100%;
-            padding-left: 0.5em;
+            padding: 0 1em;
+
+            height: 250px;
+            overflow-y: auto;
 
             li {
                 list-style-type: decimal; /* or 'decimal-leading-zero', 'upper-alpha', 'lower-alpha'... */
